--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "node-localstorage": "^3.0.5"
   },
   "scripts": {
     "start": "node app.js",
