--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "node-localstorage": "^3.0.5"
   },
   "scripts": {
